WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113591
REGRESSION (
r145870
): When parent has border-radius, the overflow part of its children will not be able to catch hits.
https://bugs.webkit.org/show_bug.cgi?id=113591
Summary
REGRESSION (r145870): When parent has border-radius, the overflow part of its...
Kevin M. Dean
Reported
2013-03-29 11:24:14 PDT
This in WordPress. Go to Appearance -> Widgets In the Right Side bar, click on the downward triangle to open the Text widget. Click in the Title input field and the textarea back and forth. Sometimes the character insertion point will appear, but eventually it won't after a few clicks. Sometimes it doesn't initially appear at all. I've set up a wordpress test area if you want to login and take a look. Just respond here or send me an email directly for the access information.
Attachments
testcase
(924 bytes, text/html)
2013-04-01 23:41 PDT
,
Xidorn Quan
no flags
Details
patch
(8.64 KB, patch)
2013-04-02 01:04 PDT
,
Xidorn Quan
no flags
Details
Formatted Diff
Diff
patch
(7.88 KB, patch)
2013-04-02 01:10 PDT
,
Xidorn Quan
no flags
Details
Formatted Diff
Diff
patch
(7.06 KB, patch)
2013-04-02 18:40 PDT
,
Xidorn Quan
no flags
Details
Formatted Diff
Diff
patch
(7.47 KB, patch)
2013-04-04 00:00 PDT
,
Xidorn Quan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-03-29 16:12:10 PDT
> Just respond here or send me an email directly for the access information.
I'd like to take a look.
Kevin M. Dean
Comment 2
2013-03-29 16:51:20 PDT
(In reply to
comment #1
)
> I'd like to take a look.
Access info emailed.
Alexey Proskuryakov
Comment 3
2013-04-01 09:50:24 PDT
Regressed in <
http://trac.webkit.org/changeset/145870
>.
Alexey Proskuryakov
Comment 4
2013-04-01 09:51:36 PDT
<
rdar://problem/13546326
>
Xidorn Quan
Comment 5
2013-04-01 18:22:44 PDT
> Just respond here or send me an email directly for the access information.
I would like to have a look.
Kevin M. Dean
Comment 6
2013-04-01 20:32:23 PDT
(In reply to
comment #5
)
> I would like to have a look.
Access info emailed.
Xidorn Quan
Comment 7
2013-04-01 23:41:40 PDT
Created
attachment 196079
[details]
testcase This testcase shows the bug. The red area is a anchor which should all be clickable, but when it is overflow and the parent has border-radius, the outside part will be unclickable.
Xidorn Quan
Comment 8
2013-04-02 01:04:37 PDT
Created
attachment 196090
[details]
patch This patch should fix this bug.
Xidorn Quan
Comment 9
2013-04-02 01:10:48 PDT
Created
attachment 196092
[details]
patch It's my fault that some unrelated code was added in the previous patch.
Simon Fraser (smfr)
Comment 10
2013-04-02 09:00:49 PDT
Comment on
attachment 196092
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=196092&action=review
> LayoutTests/ChangeLog:9 > + * fast/borders/border-radius-child-expected.txt: Added. > + * fast/borders/border-radius-child.html: Added.
I'm concerned that this test will be very sensitive to slight differences between platforms. Also, you'd be able to make a test without eventSender and handlers by using elementFromPoint. Did the bug affect non-form controls with border radii and overflow? That might make for a more reliable test case.
Xidorn Quan
Comment 11
2013-04-02 17:26:46 PDT
(In reply to
comment #10
)
> (From update of
attachment 196092
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=196092&action=review
> > > LayoutTests/ChangeLog:9 > > + * fast/borders/border-radius-child-expected.txt: Added. > > + * fast/borders/border-radius-child.html: Added. > > I'm concerned that this test will be very sensitive to slight differences between platforms.
As you can see from the patch status, the test has been passed on all platforms.
> Also, you'd be able to make a test without eventSender and handlers by using elementFromPoint.
I'll try it.
> Did the bug affect non-form controls with border radii and overflow? That might make for a more reliable test case.
Yes, it did, as you can see from the testcase I uploaded before. Consequently, some of the information provided by the reporter is inaccuracy: component should be CSS instead of Forms, and platform should be All. You may assign this bug to me so that I can correct it.
Xidorn Quan
Comment 12
2013-04-02 18:40:31 PDT
Created
attachment 196264
[details]
patch Test has been modified according to Simon Fraser's suggestion.
Alexey Proskuryakov
Comment 13
2013-04-02 19:44:40 PDT
> As you can see from the patch status, the test has been passed on all platforms.
I think that currently, only one of the chromium EWS bots runs tests, everyone else just builds.
Xidorn Quan
Comment 14
2013-04-02 20:28:52 PDT
(In reply to
comment #13
)
> > As you can see from the patch status, the test has been passed on all platforms. > > I think that currently, only one of the chromium EWS bots runs tests, everyone else just builds.
Anyway, I do not think that the test is platform-sensitive. Could you give the reason and, if possible, some suggestion to this test?
Simon Fraser (smfr)
Comment 15
2013-04-02 21:26:16 PDT
(In reply to
comment #14
)
> (In reply to
comment #13
) > > > As you can see from the patch status, the test has been passed on all platforms. > > > > I think that currently, only one of the chromium EWS bots runs tests, everyone else just builds. > > Anyway, I do not think that the test is platform-sensitive. Could you give the reason and, if possible, some suggestion to this test?
Make a really big div with larger rounded corners, and overflowing content.
Xidorn Quan
Comment 16
2013-04-02 21:37:01 PDT
(In reply to
comment #15
)
> (In reply to
comment #14
) > > (In reply to
comment #13
) > > > > As you can see from the patch status, the test has been passed on all platforms. > > > > > > I think that currently, only one of the chromium EWS bots runs tests, everyone else just builds. > > > > Anyway, I do not think that the test is platform-sensitive. Could you give the reason and, if possible, some suggestion to this test? > > Make a really big div with larger rounded corners, and overflowing content.
But the bug is, in fact, absolutely unrelated to how large the rounded corners are, and the overflowed part has been big enough IMO.
Xidorn Quan
Comment 17
2013-04-04 00:00:15 PDT
Created
attachment 196445
[details]
patch
WebKit Review Bot
Comment 18
2013-04-04 09:00:15 PDT
Comment on
attachment 196445
[details]
patch Clearing flags on attachment: 196445 Committed
r147635
: <
http://trac.webkit.org/changeset/147635
>
WebKit Review Bot
Comment 19
2013-04-04 09:00:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug