REGRESSION (r145870): Can't get insertion point to appear in some input and textareas on wordpress https://bugs.webkit.org/show_bug.cgi?id=113591

Patch by Xidorn Quan <quanxunzhen@gmail.com> on 2013-04-04
Reviewed by Simon Fraser.

Source/WebCore:

Since a child node could overflow its ancestor, it is not wise to check
one's radii boundary before checking whether the given point intersects
its children. This patch moves the related code down to fix the bug.

Test: fast/borders/border-radius-child.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::nodeAtPoint):

LayoutTests:

* fast/borders/border-radius-child-expected.txt: Added.
* fast/borders/border-radius-child.html: Added.

Canonical link: https://commits.webkit.org/132281@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147635 268f45cc-cd09-0410-ab3c-d52691b4dbfc